--- a/app/style.css
+++ b/app/style.css
@@ -156,41 +156,6 @@ label {
   display: none;
 }
 
-.p1 {
-  background: url("../public/images/photos/img1.svg");
-  background-size: cover;
-}
-
-.p2 {
-  background: url("../public/images/photos/img2.svg");
-  background-size: cover;
-}
-
-.p3 {
-  background: url("../public/images/photos/img3.svg");
-  background-size: cover;
-}
-
-.p4 {
-  background: url("../public/images/photos/img4.svg");
-  background-size: cover;
-}
-
-.p5 {
-  background: url("../public/images/photos/img5.svg");
-  background-size: cover;
-}
-
-.p6 {
-  background: url("../public/images/photos/img6.svg");
-  background-size: cover;
-}
-
-.p7 {
-  background: url("../public/images/photos/img7.svg");
-  background-size: cover;
-}
-
 /* ====== BODY/HTML/ROOT ====== */
 :root {
   font-size: 65%;
@@ -569,7 +534,7 @@ main.home .section-products {
 }
 main.home .section-products .group-list-products {
   gap: 8rem;
-  padding: 0 5.1rem;
+  padding: 0 3.1rem;
   padding-top: 6rem;
   display: flex;
   flex-direction: column;
@@ -726,19 +691,20 @@ main.buy {
   justify-content: center;
   padding: 0 3.1rem;
   height: 87vh;
+  width: 100vw;
 }
 main.buy .group-info-inputs-btn {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   border-radius: 1.2rem;
-  padding: 3rem 2rem;
+  padding: 3rem 2em;
   background-color: rgba(0, 0, 0, 0.4392156863);
   height: -moz-fit-content;
   height: fit-content;
   gap: 6rem;
-  min-width: 80rem;
   align-items: center;
+  width: 100%;
 }
 main.buy .group-info-inputs-btn .send {
   width: -moz-fit-content;
@@ -853,17 +819,19 @@ main.buy .container-buy-product {
   gap: 2rem;
   width: -moz-fit-content !important;
   width: fit-content !important;
+  justify-content: space-between;
 }
 main.buy .preview-photos {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  width: 35vw;
 }
 main.buy .preview-photos .container-photo-selected {
   aspect-ratio: 1/1;
-  width: 60rem;
-  height: 60rem;
+  width: 100%;
+  height: 70%;
 }
 main.buy .preview-photos .container-photo-selected .photo {
   width: 100%;
@@ -877,6 +845,7 @@ main.buy .preview-photos .group-photos {
   justify-content: space-between;
   gap: 2rem;
   align-items: center;
+  width: 100%;
 }
 main.buy .preview-photos .group-photos .next {
   transform: scaleX(-1);
@@ -887,7 +856,7 @@ main.buy .preview-photos .list-photos {
 }
 main.buy .preview-photos .list-photos .container-photo {
   aspect-ratio: 1/1;
-  width: 8rem;
+  width: 20%;
 }
 main.buy .preview-photos .list-photos .container-photo .photo {
   width: 100%;
@@ -895,11 +864,6 @@ main.buy .preview-photos .list-photos .container-photo .photo {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 1.2rem;
-}
-main.buy .container-buy-product {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
 }
 
 main.msg {
@@ -1018,5 +982,193 @@ main.msg .decoration {
 @media (max-width: 1030px) {
   :root {
     font-size: 51%;
+  }
+}
+@media (max-width: 860px) {
+  :root {
+    font-size: 51%;
+  }
+  .about {
+    height: 100vh;
+  }
+  .about .img-text {
+    padding: 0 2rem !important;
+    padding-top: 6rem !important;
+    display: flex;
+    flex-direction: column !important;
+    align-items: center;
+    gap: 3rem;
+  }
+  .about .img-text img {
+    width: 70%;
+  }
+  .about .img-text p {
+    margin-top: 1rem;
+    width: 90%;
+    font-size: 2.3rem;
+    font-weight: 500;
+    width: 100% !important;
+    text-align: center;
+  }
+  .section-products {
+    padding-bottom: 6rem;
+    background: linear-gradient(180deg, #245B93 0%, #0B1C2D 100%);
+  }
+  .section-products .group-list-products {
+    gap: 8rem;
+    padding: 0 3.1rem;
+    padding-top: 6rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .section-products .group-list-products .list-products {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    gap: 9rem;
+  }
+  .section-products .group-list-products .list-products .card {
+    display: flex;
+    opacity: 0.9;
+    cursor: pointer;
+    transition: 0.8s all;
+    flex-direction: column;
+    gap: 4rem;
+    box-shadow: 0 0 6rem 0.1rem #0B7ADB;
+    background-color: rgba(5, 12, 20, 0.7529411765);
+    border-radius: 1.2rem;
+    height: -moz-fit-content;
+    height: fit-content;
+    width: 90% !important;
+    justify-content: space-between;
+  }
+  .section-products .group-list-products .list-products .card:hover {
+    opacity: 1;
+    transform: scale(1.05);
+    box-shadow: 0 0 6rem 0.1rem #00E676;
+  }
+  .section-products .group-list-products .list-products .card h3 {
+    font-size: 2.3rem;
+  }
+  .section-products .group-list-products .list-products .card .buy {
+    transition: 0.5s all;
+    opacity: 0.9;
+    cursor: pointer;
+    background-color: #0B7ADB;
+    border-radius: 1.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 2rem 0;
+  }
+  .section-products .group-list-products .list-products .card .buy:hover {
+    opacity: 1;
+  }
+  .section-products .group-list-products .list-products .card .group-text {
+    display: flex;
+    flex-direction: column;
+    gap: 1.4rem;
+    padding: 0 1rem;
+  }
+  .section-products .group-list-products .list-products .card .group-text .group-price-promotion {
+    display: flex;
+    align-items: center;
+    gap: 10rem;
+  }
+  .section-products .group-list-products .list-products .card .group-text .group-price {
+    position: relative;
+  }
+  .section-products .group-list-products .list-products .card .group-text .group-price .line {
+    position: absolute;
+    top: 40%;
+    left: -10%;
+    width: 120%;
+    background-color: #898787;
+    height: 0.2rem;
+  }
+  .section-products .group-list-products .list-products .card .group-text .group-price .price {
+    font-size: 1.9rem;
+    color: #898787;
+  }
+  .section-products .group-list-products .list-products .card .group-text .promotion {
+    color: #22CC00;
+    font-size: 2.2rem;
+    margin-right: 1rem;
+  }
+  .section-products .group-list-products .list-products .card .photo-texts {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .section-products .group-list-products .list-products .card .photo-texts .container-photo {
+    aspect-ratio: 1/1;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 1.2rem;
+  }
+  .section-products .group-list-products .list-products .card .photo-texts .container-photo .photo {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .section-products .group-list-products .list-products .card .photo-texts .group-price-promotion {
+    display: flex;
+    gap: 1rem;
+    padding: 9 0.5rem;
+  }
+  .hero {
+    overflow-x: hidden;
+  }
+  .hero .group-heading-btn {
+    position: absolute;
+    left: 0;
+    top: 18%;
+    padding: 0 3.1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    gap: 3em;
+  }
+  .hero .group-heading-btn .btn-action {
+    opacity: 0.8;
+    cursor: pointer;
+    transition: 0.5s all;
+    width: -moz-fit-content;
+    width: fit-content;
+    border-radius: 1.2rem;
+    padding: 2rem 3rem;
+    color: #F9FAFB;
+    border: 0.3rem solid #00E676;
+    background-color: rgba(0, 230, 119, 0);
+  }
+  .hero .group-heading-btn .btn-action:hover {
+    opacity: 1;
+    transform: scale(1.05);
+    background-color: #11bb69;
+    border: 0.3rem solid #11bb69;
+    box-shadow: 0 0 2rem 1rem rgba(0, 230, 119, 0.4039215686);
+  }
+  .hero .group-heading-btn .heading {
+    width: 100% !important;
+    text-align: center;
+    line-height: 120%;
+  }
+  .hero .group-heading-btn .heading .green {
+    font-size: inherit;
+    color: #00E676;
+  }
+  .hero .banner-desktop {
+    background: url("../public/images/banner.svg");
+    background-size: 120vw;
+    background-color: #1f1f1f;
+    background-position: center;
+    height: 100vh;
+    width: 100vw;
   }
 }/*# sourceMappingURL=style.css.map */
