--- a/app/style.scss
+++ b/app/style.scss
@@ -868,6 +868,8 @@ main.buy {
             background-color: #0B7ADB;
             padding: 2rem 0;
             width: 50%;
+            color: #ffffff;
+            text-align: center;
 
         }
 
